crates/executor/src/tests/sql/logical_analyzer/casting/snapshots/timestamp/query_to_timestamp_explicit_scalar.snap
---
source: crates/executor/src/tests/sql/logical_analyzer/casting/timestamp.rs
description: "\"SELECT CAST('2024-04-03T12:12:10' AS TIMESTAMP) as t\""
---
Ok(
    [
        "+---------------------+",
        "| t                   |",
        "+---------------------+",
        "| 2024-04-03T12:12:10 |",
        "+---------------------+",
    ],
)
