crates/executor/src/tests/sql/logical_analyzer/casting/snapshots/timestamp/query_to_timestamp_scalar.snap
---
source: crates/executor/src/tests/sql/logical_analyzer/casting/timestamp.rs
description: "\"SELECT '03-01-2024'::TIMESTAMP as t\""
---
Ok(
    [
        "+---------------------+",
        "| t                   |",
        "+---------------------+",
        "| 2024-01-03T00:00:00 |",
        "+---------------------+",
    ],
)
